--- a/wiki/bg/3D_View.html
+++ b/wiki/bg/3D_View.html
@@ -19,7 +19,7 @@
 </p><p>&#1053;&#1103;&#1082;&#1086;&#1080; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072; &#1085;&#1072; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;&#1072;, &#1082;&#1072;&#1090;&#1086; &#1094;&#1074;&#1103;&#1090; &#1085;&#1072; &#1092;&#1086;&#1085;&#1072;, &#1089;&#1090;&#1080;&#1083;&#1098;&#1090; <a href="../Mouse_navigation.html" title="Mouse navigation">mouse navigation</a> &#1080; &#1089;&#1090;&#1098;&#1087;&#1082;&#1080; &#1079;&#1072; &#1084;&#1072;&#1097;&#1072;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077;, &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1073;&#1098;&#1076;&#1072;&#1090; &#1082;&#1086;&#1085;&#1092;&#1080;&#1075;&#1091;&#1088;&#1080;&#1088;&#1072;&#1085;&#1080; &#1089; <a href="../Preferences_Editor.html" title="Preferences Editor">Preferences Editor</a>.
 </p><p><span typeof="mw:File"><a href="../index.php?title=FreeCAD_3D_view.png&amp;filetimestamp=20190921023511&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_3D_view.png" decoding="async" width="600" height="318" class="mw-file-element" data-file-width="890" data-file-height="471"></a></span>
 </p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">The 3D View is a component of the FreeCAD interface. By default it shows a small widget with coordinate axes, and the <a href="../Navigation_Cube.html" title="Navigation Cube">Navigation Cube</a> also with coordinate axes; the grid can be displayed and configured by loading the <a href="../Draft_Workbench.html" title="Draft Workbench">Draft Workbench</a>.</p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">The 3D &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;&#1098;&#1090; &#1077; &#1082;&#1086;&#1084;&#1087;&#1086;&#1085;&#1077;&#1085;&#1090; &#1085;&#1072; &#1080;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089;&#1072; &#1085;&#1072; FreeCAD. &#1055;&#1086; &#1087;&#1086;&#1076;&#1088;&#1072;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072; &#1084;&#1072;&#1083;&#1082;&#1072; &#1092;&#1080;&#1075;&#1091;&#1088;&#1072; &#1089; &#1082;&#1086;&#1086;&#1088;&#1076;&#1080;&#1085;&#1072;&#1090;&#1085;&#1080; &#1086;&#1089;&#1080; &#1080; <a href="../Navigation_Cube.html" title="Navigation Cube">Navigation Cube</a> &#1089;&#1098;&#1097;&#1086; &#1089; &#1082;&#1086;&#1086;&#1088;&#1076;&#1080;&#1085;&#1072;&#1090;&#1085;&#1080; &#1086;&#1089;&#1080;; &#1084;&#1088;&#1077;&#1078;&#1072;&#1090;&#1072; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1089;&#1077; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072; &#1080; &#1082;&#1086;&#1085;&#1092;&#1080;&#1075;&#1091;&#1088;&#1080;&#1088;&#1072; &#1095;&#1088;&#1077;&#1079; &#1079;&#1072;&#1088;&#1077;&#1078;&#1076;&#1072;&#1085;&#1077; &#1085;&#1072; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1072; &#1084;&#1072;&#1089;&#1072; <a href="../Draft_Workbench.html" title="Draft Workbench">Draft Workbench</a>.</p>
 <h2><span class="mw-headline" id="Context_menu">Context menu</span></h2>
 <p>The options in the context menu of the 3D View depend on the selected object(s) and the currently active workbench. To display this menu optionally select one or more objects and then right-click in the 3D View.
 </p>
@@ -57,15 +57,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117200913
+Cached time: 20260117201159
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.050 seconds
-Real time usage: 0.077 seconds
+CPU time usage: 0.052 seconds
+Real time usage: 0.088 seconds
 Preprocessor visited node count: 134/1000000
-Post&#8208;expand include size: 10078/2097152 bytes
-Template argument size: 2882/2097152 bytes
+Post&#8208;expand include size: 10408/2097152 bytes
+Template argument size: 3047/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -73,15 +73,15 @@ Unstrip post&#8208;expand size: 2143/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.435      1 -total
- 51.21%    6.880      1 Template:Interface_navi/bg
- 27.78%    3.732      1 Template:Userdocnavi/bg
- 22.97%    3.086      2 Template:Navigation_menu_2
- 10.09%    1.356      1 Template:Caption
-  8.64%    1.161      1 Template:TOCright
+100.00%   15.808      1 -total
+ 46.44%    7.341      1 Template:Interface_navi/bg
+ 30.36%    4.799      1 Template:Userdocnavi/bg
+ 20.92%    3.307      2 Template:Navigation_menu_2
+ 11.63%    1.839      1 Template:TOCright
+  9.49%    1.500      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411520-0!canonical and timestamp 20260117200913 and revision id 1739636. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411520-0!canonical and timestamp 20260117201159 and revision id 1739638. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
