--- a/wiki/bg/3D_View.html
+++ b/wiki/bg/3D_View.html
@@ -20,7 +20,9 @@
 </p><p><span typeof="mw:File"><a href="../index.php?title=FreeCAD_3D_view.png&amp;filetimestamp=20190921023511&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_3D_view.png" decoding="async" width="600" height="318" class="mw-file-element" data-file-width="890" data-file-height="471"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">The 3D &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;&#1098;&#1090; &#1077; &#1082;&#1086;&#1084;&#1087;&#1086;&#1085;&#1077;&#1085;&#1090; &#1085;&#1072; &#1080;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089;&#1072; &#1085;&#1072; FreeCAD. &#1055;&#1086; &#1087;&#1086;&#1076;&#1088;&#1072;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072; &#1084;&#1072;&#1083;&#1082;&#1072; &#1092;&#1080;&#1075;&#1091;&#1088;&#1072; &#1089; &#1082;&#1086;&#1086;&#1088;&#1076;&#1080;&#1085;&#1072;&#1090;&#1085;&#1080; &#1086;&#1089;&#1080; &#1080; <a href="../Navigation_Cube.html" title="Navigation Cube">Navigation Cube</a> &#1089;&#1098;&#1097;&#1086; &#1089; &#1082;&#1086;&#1086;&#1088;&#1076;&#1080;&#1085;&#1072;&#1090;&#1085;&#1080; &#1086;&#1089;&#1080;; &#1084;&#1088;&#1077;&#1078;&#1072;&#1090;&#1072; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1089;&#1077; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072; &#1080; &#1082;&#1086;&#1085;&#1092;&#1080;&#1075;&#1091;&#1088;&#1080;&#1088;&#1072; &#1095;&#1088;&#1077;&#1079; &#1079;&#1072;&#1088;&#1077;&#1078;&#1076;&#1072;&#1085;&#1077; &#1085;&#1072; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1072; &#1084;&#1072;&#1089;&#1072; <a href="../Draft_Workbench.html" title="Draft Workbench">Draft Workbench</a>.</p>
-<h2><span class="mw-headline" id="Context_menu">Context menu</span></h2>
+<p><span id="Context_menu"></span>
+</p>
+<h2><span id=".D0.9A.D0.BE.D0.BD.D1.82.D0.B5.D0.BA.D1.81.D1.82.D0.BD.D0.BE_.D0.BC.D0.B5.D0.BD.D1.8E"></span><span class="mw-headline" id="&#1050;&#1086;&#1085;&#1090;&#1077;&#1082;&#1089;&#1090;&#1085;&#1086;_&#1084;&#1077;&#1085;&#1102;">&#1050;&#1086;&#1085;&#1090;&#1077;&#1082;&#1089;&#1090;&#1085;&#1086; &#1084;&#1077;&#1085;&#1102;</span></h2>
 <p>The options in the context menu of the 3D View depend on the selected object(s) and the currently active workbench. To display this menu optionally select one or more objects and then right-click in the 3D View.
 </p>
 <h2><span class="mw-headline" id="Details">Details</span></h2>
@@ -57,13 +59,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117201159
+Cached time: 20260117201219
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.052 seconds
-Real time usage: 0.088 seconds
-Preprocessor visited node count: 134/1000000
+CPU time usage: 0.066 seconds
+Real time usage: 0.103 seconds
+Preprocessor visited node count: 135/1000000
 Post&#8208;expand include size: 10408/2097152 bytes
 Template argument size: 3047/2097152 bytes
 Highest expansion depth: 5/100
@@ -73,15 +75,15 @@ Unstrip post&#8208;expand size: 2143/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.808      1 -total
- 46.44%    7.341      1 Template:Interface_navi/bg
- 30.36%    4.799      1 Template:Userdocnavi/bg
- 20.92%    3.307      2 Template:Navigation_menu_2
- 11.63%    1.839      1 Template:TOCright
-  9.49%    1.500      1 Template:Caption
+100.00%   18.183      1 -total
+ 39.66%    7.212      1 Template:Userdocnavi/bg
+ 37.66%    6.847      1 Template:Interface_navi/bg
+ 27.57%    5.013      2 Template:Navigation_menu_2
+ 10.06%    1.829      1 Template:Caption
+  9.82%    1.785      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411520-0!canonical and timestamp 20260117201159 and revision id 1739638. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411520-0!canonical and timestamp 20260117201219 and revision id 1739640. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
