--- a/wiki/bg/3D_View.html
+++ b/wiki/bg/3D_View.html
@@ -27,7 +27,7 @@
 </p><p><span id="Details"></span>
 </p>
 <h2><span id=".D0.94.D0.B5.D1.82.D0.B0.D0.B9.D0.BB.D0.B8"></span><span class="mw-headline" id="&#1044;&#1077;&#1090;&#1072;&#1081;&#1083;&#1080;">&#1044;&#1077;&#1090;&#1072;&#1081;&#1083;&#1080;</span></h2>
-<p>FreeCAD uses the Quarter library to use Coin3D in a Qt environment.
+<p>FreeCAD &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072; &#1073;&#1080;&#1073;&#1083;&#1080;&#1086;&#1090;&#1077;&#1082;&#1072;&#1090;&#1072; &#1085;&#1072; Quarter, &#1079;&#1072; &#1076;&#1072; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072; Coin3D &#1074; Qt &#1089;&#1088;&#1077;&#1076;&#1072;.
 </p><p>It is possible to interact directly with the 3D View scenegraph from the <a href="../Python_Console.html" title="Python Console">Python Console</a> by using the Python library Pivy.
 </p><p>For more information see the power user documentation:
 </p>
@@ -60,12 +60,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117201452
+Cached time: 20260117201517
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.061 seconds
-Real time usage: 0.129 seconds
+CPU time usage: 0.055 seconds
+Real time usage: 0.092 seconds
 Preprocessor visited node count: 136/1000000
 Post&#8208;expand include size: 10408/2097152 bytes
 Template argument size: 3047/2097152 bytes
@@ -76,15 +76,15 @@ Unstrip post&#8208;expand size: 2144/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.148      1 -total
- 42.57%   11.132      1 Template:Userdocnavi/bg
- 35.75%    9.347      1 Template:Interface_navi/bg
- 30.76%    8.043      2 Template:Navigation_menu_2
- 12.02%    3.144      1 Template:Caption
-  7.88%    2.061      1 Template:TOCright
+100.00%   16.794      1 -total
+ 42.58%    7.151      1 Template:Interface_navi/bg
+ 34.77%    5.839      1 Template:Userdocnavi/bg
+ 21.56%    3.620      2 Template:Navigation_menu_2
+ 12.47%    2.095      1 Template:Caption
+  8.00%    1.344      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411520-0!canonical and timestamp 20260117201451 and revision id 1739644. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411520-0!canonical and timestamp 20260117201517 and revision id 1739646. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
