--- a/wiki/bg/3D_View.html
+++ b/wiki/bg/3D_View.html
@@ -28,7 +28,7 @@
 </p>
 <h2><span id=".D0.94.D0.B5.D1.82.D0.B0.D0.B9.D0.BB.D0.B8"></span><span class="mw-headline" id="&#1044;&#1077;&#1090;&#1072;&#1081;&#1083;&#1080;">&#1044;&#1077;&#1090;&#1072;&#1081;&#1083;&#1080;</span></h2>
 <p>FreeCAD &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072; &#1073;&#1080;&#1073;&#1083;&#1080;&#1086;&#1090;&#1077;&#1082;&#1072;&#1090;&#1072; &#1085;&#1072; Quarter, &#1079;&#1072; &#1076;&#1072; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072; Coin3D &#1074; Qt &#1089;&#1088;&#1077;&#1076;&#1072;.
-</p><p>It is possible to interact directly with the 3D View scenegraph from the <a href="../Python_Console.html" title="Python Console">Python Console</a> by using the Python library Pivy.
+</p><p>&#1042;&#1098;&#1079;&#1084;&#1086;&#1078;&#1085;&#1086; &#1077; &#1076;&#1072; &#1074;&#1079;&#1072;&#1080;&#1084;&#1086;&#1076;&#1077;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1077; &#1076;&#1080;&#1088;&#1077;&#1082;&#1090;&#1085;&#1086; &#1089;&#1098;&#1089;  3D View scenegraph &#1086;&#1090; <a href="../Python_Console.html" title="Python Console">Python Console</a>, &#1082;&#1072;&#1090;&#1086; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1090;&#1077; &#1073;&#1080;&#1073;&#1083;&#1080;&#1086;&#1090;&#1077;&#1082;&#1072;&#1090;&#1072; &#1085;&#1072; Python Pivy.
 </p><p>For more information see the power user documentation:
 </p>
 <ul><li><a href="../Scenegraph.html" title="Scenegraph">Scenegraph</a>, description of Coin3D.</li>
@@ -60,12 +60,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117201517
+Cached time: 20260117201622
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.055 seconds
-Real time usage: 0.092 seconds
+CPU time usage: 0.063 seconds
+Real time usage: 0.111 seconds
 Preprocessor visited node count: 136/1000000
 Post&#8208;expand include size: 10408/2097152 bytes
 Template argument size: 3047/2097152 bytes
@@ -76,15 +76,15 @@ Unstrip post&#8208;expand size: 2144/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.794      1 -total
- 42.58%    7.151      1 Template:Interface_navi/bg
- 34.77%    5.839      1 Template:Userdocnavi/bg
- 21.56%    3.620      2 Template:Navigation_menu_2
- 12.47%    2.095      1 Template:Caption
-  8.00%    1.344      1 Template:TOCright
+100.00%   15.327      1 -total
+ 41.06%    6.294      1 Template:Interface_navi/bg
+ 37.66%    5.772      1 Template:Userdocnavi/bg
+ 27.42%    4.202      2 Template:Navigation_menu_2
+  9.83%    1.507      1 Template:TOCright
+  8.85%    1.356      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411520-0!canonical and timestamp 20260117201517 and revision id 1739646. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411520-0!canonical and timestamp 20260117201622 and revision id 1739648. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
