--- a/wiki/bg/3D_View.html
+++ b/wiki/bg/3D_View.html
@@ -7,7 +7,7 @@
 <li><a href="../pl/3D_View.html" class="mw-pt-progress mw-pt-progress--complete" title="Okno widoku 3D (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt/3D_View.html" class="mw-pt-progress mw-pt-progress--complete" title="Vista 3D (100% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="../pt-br/3D_View.html" class="mw-pt-progress mw-pt-progress--high" title="Vista 3D (73% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
 <li><a href="../ru/3D_View.html" class="mw-pt-progress mw-pt-progress--complete" title="3D &#1042;&#1080;&#1076; (100% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ja/3D_View.html" class="mw-pt-progress mw-pt-progress--low" title="3D&#12499;&#12517;&#12540; (0% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
 <li><a href="../ko/3D_View.html" class="mw-pt-progress mw-pt-progress--med" title="3D &#48372;&#44592; (36% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
@@ -29,12 +29,12 @@
 <h2><span id=".D0.94.D0.B5.D1.82.D0.B0.D0.B9.D0.BB.D0.B8"></span><span class="mw-headline" id="&#1044;&#1077;&#1090;&#1072;&#1081;&#1083;&#1080;">&#1044;&#1077;&#1090;&#1072;&#1081;&#1083;&#1080;</span></h2>
 <p>FreeCAD &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072; &#1073;&#1080;&#1073;&#1083;&#1080;&#1086;&#1090;&#1077;&#1082;&#1072;&#1090;&#1072; &#1085;&#1072; Quarter, &#1079;&#1072; &#1076;&#1072; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072; Coin3D &#1074; Qt &#1089;&#1088;&#1077;&#1076;&#1072;.
 </p><p>&#1042;&#1098;&#1079;&#1084;&#1086;&#1078;&#1085;&#1086; &#1077; &#1076;&#1072; &#1074;&#1079;&#1072;&#1080;&#1084;&#1086;&#1076;&#1077;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1077; &#1076;&#1080;&#1088;&#1077;&#1082;&#1090;&#1085;&#1086; &#1089;&#1098;&#1089;  3D View scenegraph &#1086;&#1090; <a href="../Python_Console.html" title="Python Console">Python Console</a>, &#1082;&#1072;&#1090;&#1086; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1090;&#1077; &#1073;&#1080;&#1073;&#1083;&#1080;&#1086;&#1090;&#1077;&#1082;&#1072;&#1090;&#1072; &#1085;&#1072; Python Pivy.
-</p><p>For more information see the power user documentation:
+</p><p>&#1047;&#1072; &#1087;&#1086;&#1074;&#1077;&#1095;&#1077; &#1080;&#1085;&#1092;&#1086;&#1088;&#1084;&#1072;&#1094;&#1080;&#1103; &#1074;&#1080;&#1078;&#1090;&#1077; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;&#1072;&#1094;&#1080;&#1103;&#1090;&#1072; &#1079;&#1072; &#1085;&#1072;&#1087;&#1088;&#1077;&#1076;&#1085;&#1072;&#1083;&#1080; &#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1080;:
 </p>
-<ul><li><a href="../Scenegraph.html" title="Scenegraph">Scenegraph</a>, description of Coin3D.</li>
-<li><a href="../Pivy.html" title="Pivy">Pivy</a>, usage of Coin3D from the Python console.</li>
-<li><a href="../Third_Party_Libraries.html" title="Third Party Libraries">Third party libraries</a> used by FreeCAD.</li>
-<li><a rel="nofollow" class="external text" href="https://grey.colorado.edu/coin3d/index.html">Coin3D</a> C++ documentation.</li></ul>
+<ul><li><a href="../Scenegraph.html" title="Scenegraph">Scenegraph</a>, &#1086;&#1087;&#1080;&#1089;&#1072;&#1085;&#1080;&#1077; &#1085;&#1072; Coin3D.</li>
+<li><a href="../Pivy.html" title="Pivy">Pivy</a>, &#1080;&#1079;&#1087;&#1086;&#1073;&#1079;&#1074;&#1072;&#1085;&#1077; Coin3D &#1086;&#1090; Python console.</li>
+<li><a href="../Third_Party_Libraries.html" title="Third Party Libraries">Third party libraries</a> &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1085;&#1080; &#1074;&#1098;&#1074; FreeCAD.</li>
+<li><a rel="nofollow" class="external text" href="https://grey.colorado.edu/coin3d/index.html">Coin3D</a> C++ &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;&#1072;&#1094;&#1080;&#1103;&#1090;&#1072;.</li></ul>
 <p><br>
 </p>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
@@ -60,31 +60,31 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117201622
+Cached time: 20260117201835
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.063 seconds
-Real time usage: 0.111 seconds
+CPU time usage: 0.052 seconds
+Real time usage: 0.079 seconds
 Preprocessor visited node count: 136/1000000
 Post&#8208;expand include size: 10408/2097152 bytes
 Template argument size: 3047/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2144/5000000 bytes
+Unstrip post&#8208;expand size: 2148/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.327      1 -total
- 41.06%    6.294      1 Template:Interface_navi/bg
- 37.66%    5.772      1 Template:Userdocnavi/bg
- 27.42%    4.202      2 Template:Navigation_menu_2
-  9.83%    1.507      1 Template:TOCright
-  8.85%    1.356      1 Template:Caption
+100.00%   15.162      1 -total
+ 46.35%    7.028      1 Template:Interface_navi/bg
+ 32.63%    4.947      1 Template:Userdocnavi/bg
+ 22.37%    3.392      2 Template:Navigation_menu_2
+  9.75%    1.479      1 Template:Caption
+  8.75%    1.327      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411520-0!canonical and timestamp 20260117201622 and revision id 1739648. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411520-0!canonical and timestamp 20260117201834 and revision id 1739650. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
