--- a/wiki/bg/Tree_View.html
+++ b/wiki/bg/Tree_View.html
@@ -15,7 +15,7 @@
 <p><span id="Introduction"></span>
 </p>
 <h2><span id=".D0.92.D1.8A.D0.B2.D0.B5.D0.B4.D0.B5.D0.BD.D0.B8.D0.B5"></span><span class="mw-headline" id="&#1042;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;">&#1042;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;</span></h2>
-<p>The <a href="../Tree_View.html" title="Tree View">Tree View</a> appears in the upper section of the <b>Model</b> panel (if the <a href="../Combo_View.html" title="Combo View">Combo View</a> is active) or as a stand-alone panel. It shows all user defined objects that are part of a FreeCAD document. The Tree View is a representation of the <a href="../Document_structure.html" title="Document structure">document's structure</a>, and indicates what information is saved to disk.
+<p><a class="mw-selflink selflink">&#1044;&#1098;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1077;&#1085; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;</a> &#1089;&#1077; &#1087;&#1086;&#1103;&#1074;&#1103;&#1074;&#1072; &#1074; &#1075;&#1086;&#1088;&#1085;&#1072;&#1090;&#1072; &#1095;&#1072;&#1089;&#1090; &#1085;&#1072; &#1087;&#1072;&#1085;&#1077;&#1083; <b>Model</b> (&#1072;&#1082;&#1086; <a href="../Combo_View.html" title="Combo View">Combo View</a> &#1077; &#1072;&#1082;&#1090;&#1080;&#1074;&#1077;&#1085;) &#1080;&#1083;&#1080; &#1082;&#1072;&#1090;&#1086; &#1089;&#1072;&#1084;&#1086;&#1089;&#1090;&#1086;&#1103;&#1090;&#1077;&#1083;&#1077;&#1085; &#1087;&#1072;&#1085;&#1077;&#1083;. &#1058;&#1086;&#1081; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072; &#1074;&#1089;&#1080;&#1095;&#1082;&#1080; &#1076;&#1077;&#1092;&#1080;&#1085;&#1080;&#1088;&#1072;&#1085;&#1080; &#1086;&#1090; &#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1103; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1089;&#1072; &#1095;&#1072;&#1089;&#1090; &#1086;&#1090; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090; &#1085;&#1072; FreeCAD. &#1048;&#1079;&#1075;&#1083;&#1077;&#1076;&#1098;&#1090; &#1085;&#1072; &#1076;&#1098;&#1088;&#1074;&#1086;&#1090;&#1086; &#1077; &#1087;&#1088;&#1077;&#1076;&#1089;&#1090;&#1072;&#1074;&#1103;&#1085;&#1077; &#1085;&#1072; &#1089;&#1090;&#1088;&#1091;&#1082;&#1090;&#1091;&#1088;&#1072;&#1090;&#1072; &#1085;&#1072; <a href="../Document_structure.html" title="Document structure">&#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;</a> &#1080; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072; &#1082;&#1072;&#1082;&#1074;&#1072; &#1080;&#1085;&#1092;&#1086;&#1088;&#1084;&#1072;&#1094;&#1080;&#1103; &#1089;&#1077; &#1079;&#1072;&#1087;&#1080;&#1089;&#1074;&#1072; &#1085;&#1072; &#1076;&#1080;&#1089;&#1082;.
 </p><p>These objects don't necessarily have to be geometrical shapes visible in the <a href="../3D_View.html" title="3D View">3D View</a>, but can also be supporting data objects created with any of the <a href="../Workbenches.html" title="Workbenches">workbenches</a>.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view.png&amp;filetimestamp=20240720173431&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view.png" decoding="async" width="298" height="280" class="mw-file-element" data-file-width="298" data-file-height="280"></a></span>
 </p>
@@ -153,12 +153,12 @@ Fully expanding the tree reveals the original elements that were used to create 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117202657
+Cached time: 20260117202902
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.142 seconds
-Real time usage: 0.198 seconds
+CPU time usage: 0.146 seconds
+Real time usage: 0.207 seconds
 Preprocessor visited node count: 746/1000000
 Post&#8208;expand include size: 37949/2097152 bytes
 Template argument size: 12168/2097152 bytes
@@ -169,19 +169,19 @@ Unstrip post&#8208;expand size: 2222/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   41.602      1 -total
- 17.98%    7.481      3 Template:Navigation_menu_2
- 17.93%    7.461      1 Template:Std_Base_navi/bg
- 14.74%    6.133      1 Template:Interface_navi/bg
- 14.13%    5.877      1 Template:Userdocnavi/bg
-  9.63%    4.008      2 Template:PropertyData
-  7.55%    3.141      2 Template:Caption
-  6.26%    2.605      1 Template:PropertyView
-  5.86%    2.439     19 Template:KEY
-  5.52%    2.297      3 Template:Variable
+100.00%   47.007      1 -total
+ 24.44%   11.490      1 Template:Std_Base_navi/bg
+ 17.06%    8.019      3 Template:Navigation_menu_2
+ 15.89%    7.471      1 Template:Userdocnavi/bg
+ 14.40%    6.770      1 Template:Interface_navi/bg
+  8.52%    4.005      2 Template:PropertyData
+  5.63%    2.648      6 Template:MenuCommand
+  5.59%    2.629      3 Template:Variable
+  5.33%    2.507      1 Template:PropertyView
+  5.32%    2.501      2 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260117202657 and revision id 1739658. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260117202902 and revision id 1739660. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
